// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders as expected 1`] = `
.c0 {
  font-size: 14px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #26A826;
}

.c0:hover {
  cursor: pointer;
  color: #006300;
}

.c0:focus {
  color: rgba(0,0,0,0.9);
  cursor: default;
  background-color: #FFDA7F;
  outline: none;
}

<div
  className=""
  data-component="link"
  disabled={false}
>
  <a
    className="c0"
    data-component="link"
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <span>
      <span
        className="carbon-link__content"
      >
        test
      </span>
    </span>
  </a>
</div>
`;

exports[`Link should render as expected 1`] = `
"
    cursor: pointer;
    font-weight: bold;
    text-decoration: none;
    color: #255BC7;
  
    &:hover{
      cursor: pointer;
      color: #004B87;
      text-decoration: underline;
    }"
`;

exports[`Link when component has classic theme should render correct style 1`] = `
.c0 {
  font-size: 14px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #00805D;
  cursor: pointer;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #255BC7;
}

.c0:hover {
  cursor: pointer;
  color: #006045;
}

.c0:hover {
  cursor: pointer;
  color: #004B87;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className=""
  data-component="link"
  disabled={false}
>
  <a
    className="c0"
    data-component="link"
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <span>
      <span
        className="carbon-link__content"
      >
        test
      </span>
    </span>
  </a>
</div>
`;
